<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <!-- Accessory status -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/main_accessory_status_heading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/main_accessory_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/main_accessory_status_message"
            android:textSize="13sp" />
    </LinearLayout>

    <!-- Send value to device -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/main_send_heading"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/main_send_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/main_send_value_hint"
            android:minWidth="250dp"
            android:padding="5dp"
            android:textSize="13sp" />

        <Button
            android:id="@+id/main_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/main_send_button" />
    </LinearLayout>

    <!-- Read value from device -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_read_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_read_value"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:padding="5dp"
                android:text="@string/main_read_value"
                android:textSize="13sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>